# rag-lab-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.db
app/: app.py  db.py
app/rag/: __init__.py  pinecone.py  query.py
